App view render Status subview *Router filter functionality

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="bower_components/todomvc-common/base.css">
 </head>
 <body>
+    <section id="todoapp">
+    </section>
+    <footer id="info">
+    <p>Double-click to edit a todo</p>
+    <p>Written by <a href="https://github.com/olegpopadko" onclick="return !window.open(this.href);">Oleg Popadko</a></p>
+    <p>Makeup from <a href="http://todomvc.com" onclick="return !window.open(this.href);">TodoMVC</a></p>
+</footer>
     <script src="app/config.js"></script>
     <script data-main="app/main" src="bower_components/requirejs/require.js"></script>
 </body>
