--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <title>Todo</title>
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <link rel="stylesheet" href="bower_components/todomvc-common/base.css">
+    <style type="text/css">
+        .timestamp {
+            font-size: 12px;
+        }
+    </style>
 </head>
 <body>
     <section id="todoapp">
